--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -121,8 +121,7 @@ jobs:
     runs-on: ubuntu-latest
     needs: [validate, format]
     if: |
-      needs.validate.result == 'success' && 
-      (needs.format.result == 'skipped' || needs.format.result == 'success') &&
+      github.ref != 'refs/heads/main' &&
       ${{ github.event.pull_request.user.login }} == 'cs3219-2223-g42'
     steps:
       - name: automerge
