--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -116,3 +116,16 @@ jobs:
           git add .
           git commit -m "[bot] auto-format files"
           git push
+
+  automerge:
+    runs-on: ubuntu-latest
+    needs: [validate, format]
+    if: github.event_name == 'pull_request'
+    steps:
+      - name: automerge
+        uses: pascalgn/automerge-action@v0.15.5
+        env:
+          GITHUB_TOKEN: "${{ secrets.GITHUB_TOKEN }}"
+          MERGE_LABELS: "status: done"
+          MERGE_METHOD: "squash"
+          UPDATE_METHOD: "rebase"
